created decent architecture for value prediction and some other predictions

--- a/stateflow_learning.ipynb
+++ b/stateflow_learning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9cf2cbbc",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
     "from learning.model.stateflow import DWStateFlowModel\n",
     "from learning.data.stateflow_dataset import DWStateFlowDataset\n",
     "from learning.data.stateflow_utils import collate_stateflow_data\n",
-    "from learning.data.batch_utils import move_to_device\n",
+    "from learning.data.av_utils import move_to_device\n",
     "from learning.data.stateflow_utils import (\n",
     "    extract_input, \n",
     "    extract_winners_output_target, \n",
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "4c870636",
    "metadata": {},
    "outputs": [],
