added server functionality for the model play

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,13 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "4a839449",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
+    "import json\n",
     "import warnings\n",
+    "from server.json_utils import json_to_string\n",
+    "from server.utils import add_winners_info\n",
+    "import glob\n",
     "warnings.filterwarnings(\"ignore\", message=r\"index_reduce\\(\\) is in beta and the API may change at any time\")"
    ]
   },
@@ -22,111 +26,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "9cb186a1",
+   "execution_count": 2,
+   "id": "91c36196",
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx0 = torch.tensor([[0], [0], [0], [0], [1], [1], [1], [1]])\n",
-    "idx1 = torch.tensor([[0, 0, 1, 1, 0, 0, 1, 1]])\n",
-    "\n",
-    "X = torch.tensor([\n",
-    "      #  #                #      #    \n",
-    "    [ 1, 10, 100, 1000, 10000, 100000, 1000000, 10000000],  #\n",
-    "    [ 2, 20, 200, 2000, 20000, 200000, 2000000, 20000000],  #\n",
-    "    [ 3, 30, 300, 3000, 30000, 300000, 3000000, 30000000],  #\n",
-    "    [ 4, 40, 400, 4000, 40000, 400000, 4000000, 40000000],  #\n",
-    "    [ 5, 50, 500, 5000, 50000, 500000, 5000000, 50000000],  \n",
-    "    [ 6, 60, 600, 6000, 60000, 600000, 6000000, 60000000], \n",
-    "    [ 7, 70, 700, 7000, 70000, 700000, 7000000, 70000000],\n",
-    "    [ 8, 80, 800, 8000, 80000, 800000, 8000000, 80000000]\n",
-    "])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "5021534c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[  1100110, 110011000],\n",
-       "        [  2860286, 286028600]])"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# tensor[indices] <- values\n",
-    "\n",
-    "Z = torch.zeros(2, 2, dtype=X.dtype)\n",
-    "Z.index_put((idx0, idx1), X, accumulate=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "b38755b6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Z = torch.zeros(2, 2, dtype=X.dtype)\n",
-    "Z[(idx0, idx1)] += X"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "ad1efa3e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[  400000, 40000000],\n",
-       "        [  800000, 80000000]])"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Z"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "65055d4f",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "a Tensor with 2 elements cannot be converted to Scalar",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[35]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mtorch\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtensor\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m{\u001b[49m\u001b[32;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m11\u001b[39;49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mitem\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mRuntimeError\u001b[39m: a Tensor with 2 elements cannot be converted to Scalar"
-     ]
-    }
-   ],
-   "source": [
-    "torch.tensor(list({10, 11})).item()"
+    "paths = glob.glob(\"./history/history/*.json\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91c36196",
+   "id": "9c2b43d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./history/history/history_00651_20250807_063010.json\n",
+      "./history/history/history_00797_20250807_111734.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "for p in paths:\n",
+    "    print(p)\n",
+    "    game_history = json.load(open(p, \"r\"))\n",
+    "    add_winners_info(game_history)\n",
+    "    json_str = json_to_string(game_history)\n",
+    "    open(p, \"w\").write(json_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "eaff7e4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m players_alive = [\u001b[38;5;28mset\u001b[39m(s[\u001b[33m\"\u001b[39m\u001b[33mteams\u001b[39m\u001b[33m\"\u001b[39m]) \u001b[38;5;28;01mfor\u001b[39;00m s \u001b[38;5;129;01min\u001b[39;00m \u001b[43mdata\u001b[49m[\u001b[33m\"\u001b[39m\u001b[33mstates\u001b[39m\u001b[33m\"\u001b[39m]]\n",
+      "\u001b[31mNameError\u001b[39m: name 'data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "players_alive = [set(s[\"teams\"]) for s in data[\"states\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60fddc79",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -134,7 +91,70 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaff7e4c",
+   "id": "412b24fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([55, 73, 142, 214, 384, 465, 526], 7)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "player_out_state_idx, winner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "917efdd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 2, 0, 4, 5, 6, 1]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "players_out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bedf0c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({1, 6, 7}, {1, 7})"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "players_alive[464], players_alive[465]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8969bfbd",
    "metadata": {},
    "outputs": [],
    "source": []
